add border-top:hover, add balise picture with src, add hover for all links heb/footer, footer-ajustement and upgrades header icons-filters

--- a/index.html
+++ b/index.html
@@ -104,7 +104,15 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Auberge_La_cannebière.jpg" alt="Auberge la cannebière">
+                  <picture>
+                    <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Auberge_La_cannebière.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                      type="image/jpg">
+                    <img src="images/hebergements/4_small/Auberge_La_cannebière.jpg" alt="Auberge la cannebière">
+                 </picture>
                 </div>
                 <div class="heb-description">
                   <h2>Auberge la Cannebière</h2>
@@ -120,7 +128,15 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Hotel_du_port.jpg" alt="Hôtel du port">
+                  <picture>
+                   <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Hotel_du_port.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                      type="image/jpg">
+                    <img src="images/hebergements/4_small/Hotel_du_port.jpg" alt="Hôtel du port">
+                  </picture>
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel du port</h2>
@@ -136,7 +152,15 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Hotel_les_mouettes.jpg" alt="Hôtel les mouettes">
+                  <picture>
+                    <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Hotel_les_mouettes.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                      type="image/jpg">
+                    <img src="images/hebergements/4_small/Hotel_les_mouettes.jpg" alt="Hôtel les mouettes">
+                  </picture>
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel Les mouettes</h2>
@@ -152,7 +176,15 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
+                  <picture>
+                    <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Hotel_de_la_mer.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                      type="image/jpg">
                   <img src="images/hebergements/4_small/Hotel_de_la_mer.jpg" alt="Hôtel de la mer">
+                  </picture>
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel de la mer</h2>
@@ -168,7 +200,15 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Auberge_Le_Panier.jpg" alt="Auberge Le Panier">
+                  <picture>
+                    <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Auberge_Le_Panier.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                      type="image/jpg">
+                    <img src="images/hebergements/4_small/Auberge_Le_Panier.jpg" alt="Auberge Le Panier">
+                  </picture>
                 </div>
                 <div class="heb-description">
                   <h2>Auberge Le Panier</h2>
@@ -184,7 +224,15 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Hotel_chez_Amina.jpg" alt="Hôtel chez Amina">
+                   <picture>
+                    <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Hotel_chez_Amina.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                      type="image/jpg">
+                    <img src="images/hebergements/4_small/Hotel_chez_Amina.jpg" alt="Hôtel chez Amina">
+                  </picture>
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel chez Amina</h2>
@@ -198,7 +246,7 @@
               </a>
             </div>   
             <div class="heb-link">
-              <a href="#">Afficher plus</a>
+              <a href="#" id="afficher">Afficher plus</a>
             </div>            
           </article>
 
@@ -212,7 +260,15 @@
             <div class="pop-div">
               <a href="#">
                 <div class="pop-img">
-                  <img src="images/hebergements/4_small/Hotel_Le_soleil_du_matin.jpg" alt="Hôtel Le soleil du matin">
+                  <picture>
+                    <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Hotel_Le_soleil_du_matin.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                      type="image/jpg">
+                      <img src="images/hebergements/4_small/Hotel_Le_soleil_du_matin.jpg" alt="Hôtel Le soleil du matin">
+                  </picture>
                 </div>
                 <div class="pop-description">
                   <h2>Hôtel Le soleil du matin</h2>
@@ -230,7 +286,15 @@
             <div class="pop-div">
               <a href="#">
                 <div class="pop-img">
-                  <img src="images/hebergements/4_small/Au_coeur_de_l'eau.jpg" alt="Au coeur de l'eau Chambresd'hôtes">
+                  <picture>
+                    <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Au_coeur_de_l'eau.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                      type="image/jpg">
+                      <img src="images/hebergements/4_small/Au_coeur_de_l'eau.jpg" alt="Au coeur de l'eau Chambresd'hôtes">
+                  </picture>
                 </div>
                 <div class="pop-description">
                   <h2>Au coeur de l'eau Chambres d'hôtes</h2>
@@ -248,7 +312,15 @@
             <div class="pop-div">
               <a href="#">
                 <div class="pop-img">
-                  <img src="images/hebergements/4_small/Hotel_tout_bleu_et_blanc.jpg" alt="Hôtel Tout bleu et Blanc">
+                  <picture>
+                    <source media="(max-width: 767px)"
+                      srcset="images/hebergements/4_small/Hotel_tout_bleu_et_blanc.jpg"
+                      type="image/jpg">
+                    <source media="(max-width: 992px)"
+                      srcset="images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                      type="image/jpg">
+                      <img src="images/hebergements/4_small/Hotel_tout_bleu_et_blanc.jpg" alt="Hôtel Tout bleu et Blanc">
+                  </picture>
                 </div>
                 <div class="pop-description">
                   <h2>Hôtel Tout bleu et Blanc</h2>
