--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     </div>
 
     <!-- footer -->
-    <footer>
+    <footer class="bg-col-grey">
       <section>
         <div class="container-footer">
           <ul class="mentions">
